Antlr/CParser.py
# Generated from Antlr/C.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "'if'", "'else'", "'while'", 
                     "'for'", "'break'", "'continue'", "'return'", "'printf'", 
                     "'scanf'", "<INVALID>", "<INVALID>", "'='", "';'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'.'", 
                     "'+'", "'-'", "'*'", "'/'", "'!'", "'&'", "'%'", "'#'", 
                     "<INVALID>", "'int'", "'char'", "'bool'", "'float'", 
                     "'const'", "'#include'", "'<stdio.h>'" ]

    symbolicNames = [ "<INVALID>", "VOID", "IF", "ELSE", "WHILE", "FOR", 
                      "BREAK", "CONTINUE", "RETURN", "PRINTF", "SCANF", 
                      "COMPOPS", "LOGICOPS", "EQUALS", "SEMICOLON", "LBRACKET", 
                      "RBRACKET", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", 
                      "COMMA", "DOT", "PLUS", "MINUS", "STAR", "DIVIDE", 
                      "EXCLAMAION", "AMPERSAND", "PROCENT", "HASH", "SPECIALUNARY", 
                      "INT", "CHAR", "BOOL", "FLOAT", "CONST", "INCLUDE", 
                      "STDIO", "IDENTIFIER", "INTLITERAL", "FLOATLITERAL", 
                      "CHARLITERAL", "STRINGLITERAL", "BOOLLITERAL", "SINGLECOMMENT", 
                      "MULTICOMMENT", "WS", "ANY" ]

    RULE_run = 0
    RULE_include = 1
    RULE_global_var = 2
    RULE_function = 3
    RULE_forward_declare = 4
    RULE_function_declaration = 5
    RULE_argument_declaration = 6
    RULE_function_call = 7
    RULE_printf = 8
    RULE_scanf = 9
    RULE_argument = 10
    RULE_statement = 11
    RULE_array_initialisation = 12
    RULE_block_scope = 13
    RULE_compound_statement = 14
    RULE_expression_statement = 15
    RULE_jump_statement = 16
    RULE_if = 17
    RULE_else = 18
    RULE_while = 19
    RULE_for = 20
    RULE_break = 21
    RULE_continue = 22
    RULE_return = 23
    RULE_condition = 24
    RULE_for_condition = 25
    RULE_update_expression = 26
    RULE_comment = 27
    RULE_assignment = 28
    RULE_rvalue_assignment = 29
    RULE_declaration = 30
    RULE_instantiationExpression = 31
    RULE_not_const = 32
    RULE_const = 33
    RULE_type = 34
    RULE_logicexpression = 35
    RULE_boolexpression = 36
    RULE_term = 37
    RULE_factor = 38
    RULE_element = 39
    RULE_array = 40
    RULE_logicops = 41
    RULE_compops = 42
    RULE_termops = 43
    RULE_factorops = 44
    RULE_unaryops = 45
    RULE_typecast = 46
    RULE_pointer = 47
    RULE_literal = 48

    ruleNames =  [ "run", "include", "global_var", "function", "forward_declare", 
                   "function_declaration", "argument_declaration", "function_call", 
                   "printf", "scanf", "argument", "statement", "array_initialisation", 
                   "block_scope", "compound_statement", "expression_statement", 
                   "jump_statement", "if", "else", "while", "for", "break", 
                   "continue", "return", "condition", "for_condition", "update_expression", 
                   "comment", "assignment", "rvalue_assignment", "declaration", 
                   "instantiationExpression", "not_const", "const", "type", 
                   "logicexpression", "boolexpression", "term", "factor", 
                   "element", "array", "logicops", "compops", "termops", 
                   "factorops", "unaryops", "typecast", "pointer", "literal" ]

    EOF = Token.EOF
    VOID=1
    IF=2
    ELSE=3
    WHILE=4
    FOR=5
    BREAK=6
    CONTINUE=7
    RETURN=8
    PRINTF=9
    SCANF=10
    COMPOPS=11
    LOGICOPS=12
    EQUALS=13
    SEMICOLON=14
    LBRACKET=15
    RBRACKET=16
    LCURLY=17
    RCURLY=18
    LSQUARE=19
    RSQUARE=20
    COMMA=21
    DOT=22
    PLUS=23
    MINUS=24
    STAR=25
    DIVIDE=26
    EXCLAMAION=27
    AMPERSAND=28
    PROCENT=29
    HASH=30
    SPECIALUNARY=31
    INT=32
    CHAR=33
    BOOL=34
    FLOAT=35
    CONST=36
    INCLUDE=37
    STDIO=38
    IDENTIFIER=39
    INTLITERAL=40
    FLOATLITERAL=41
    CHARLITERAL=42
    STRINGLITERAL=43
    BOOLLITERAL=44
    SINGLECOMMENT=45
    MULTICOMMENT=46
    WS=47
    ANY=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CParser.EOF, 0)

        def include(self):
            return self.getTypedRuleContext(CParser.IncludeContext,0)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.FunctionContext)
            else:
                return self.getTypedRuleContext(CParser.FunctionContext,i)


        def global_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Global_varContext)
            else:
                return self.getTypedRuleContext(CParser.Global_varContext,i)


        def forward_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Forward_declareContext)
            else:
                return self.getTypedRuleContext(CParser.Forward_declareContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.CommentContext)
            else:
                return self.getTypedRuleContext(CParser.CommentContext,i)


        def getRuleIndex(self):
            return CParser.RULE_run

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun" ):
                listener.enterRun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun" ):
                listener.exitRun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRun" ):
                return visitor.visitRun(self)
            else:
                return visitor.visitChildren(self)




    def run(self):

        localctx = CParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 98
                self.include()


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 105686260252674) != 0):
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 102
                    self.global_var()
                    pass

                elif la_ == 3:
                    self.state = 103
                    self.forward_declare()
                    pass

                elif la_ == 4:
                    self.state = 104
                    self.comment()
                    pass


                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CParser.INCLUDE, 0)

        def STDIO(self):
            return self.getToken(CParser.STDIO, 0)

        def getRuleIndex(self):
            return CParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = CParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CParser.INCLUDE)
            self.state = 113
            self.match(CParser.STDIO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instantiationExpression(self):
            return self.getTypedRuleContext(CParser.InstantiationExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CParser.SEMICOLON, 0)

        def array_initialisation(self):
            return self.getTypedRuleContext(CParser.Array_initialisationContext,0)


        def getRuleIndex(self):
            return CParser.RULE_global_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_var" ):
                listener.enterGlobal_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_var" ):
                listener.exitGlobal_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_var" ):
                return visitor.visitGlobal_var(self)
            else:
                return visitor.visitChildren(self)




    def global_var(self):

        localctx = CParser.Global_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_var)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.instantiationExpression()
                self.state = 116
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.array_initialisation()
                self.state = 119
                self.match(CParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(CParser.Function_declarationContext,0)


        def block_scope(self):
            return self.getTypedRuleContext(CParser.Block_scopeContext,0)


        def getRuleIndex(self):
            return CParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = CParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.function_declaration()
            self.state = 124
            self.block_scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Forward_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(CParser.Function_declarationContext,0)


        def SEMICOLON(self):
            return self.getToken(CParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CParser.RULE_forward_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForward_declare" ):
                listener.enterForward_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForward_declare" ):
                listener.exitForward_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForward_declare" ):
                return visitor.visitForward_declare(self)
            else:
                return visitor.visitChildren(self)




    def forward_declare(self):

        localctx = CParser.Forward_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_forward_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.function_declaration()
            self.state = 127
            self.match(CParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def LBRACKET(self):
            return self.getToken(CParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(CParser.RBRACKET, 0)

        def VOID(self):
            return self.getToken(CParser.VOID, 0)

        def type_(self):
            return self.getTypedRuleContext(CParser.TypeContext,0)


        def argument_declaration(self):
            return self.getTypedRuleContext(CParser.Argument_declarationContext,0)


        def getRuleIndex(self):
            return CParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = CParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 129
                self.match(CParser.VOID)
                pass
            elif token in [32, 33, 34, 35]:
                self.state = 130
                self.type_()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 133
            self.match(CParser.IDENTIFIER)
            self.state = 134
            self.match(CParser.LBRACKET)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 133143986176) != 0):
                self.state = 135
                self.argument_declaration()


            self.state = 138
            self.match(CParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Argument_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def CONST(self):
            return self.getToken(CParser.CONST, 0)

        def AMPERSAND(self):
            return self.getToken(CParser.AMPERSAND, 0)

        def COMMA(self):
            return self.getToken(CParser.COMMA, 0)

        def argument_declaration(self):
            return self.getTypedRuleContext(CParser.Argument_declarationContext,0)


        def getRuleIndex(self):
            return CParser.RULE_argument_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument_declaration" ):
                listener.enterArgument_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument_declaration" ):
                listener.exitArgument_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument_declaration" ):
                return visitor.visitArgument_declaration(self)
            else:
                return visitor.visitChildren(self)




    def argument_declaration(self):

        localctx = CParser.Argument_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 140
                self.match(CParser.CONST)


            self.state = 143
            self.type_()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 144
                self.match(CParser.AMPERSAND)


            self.state = 147
            self.match(CParser.IDENTIFIER)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 148
                self.match(CParser.COMMA)
                self.state = 149
                self.argument_declaration()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scanf(self):
            return self.getTypedRuleContext(CParser.ScanfContext,0)


        def printf(self):
            return self.getTypedRuleContext(CParser.PrintfContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def LBRACKET(self):
            return self.getToken(CParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(CParser.RBRACKET, 0)

        def argument(self):
            return self.getTypedRuleContext(CParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = CParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.scanf()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.printf()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(CParser.IDENTIFIER)
                self.state = 155
                self.match(CParser.LBRACKET)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34637225166336) != 0):
                    self.state = 156
                    self.argument()


                self.state = 159
                self.match(CParser.RBRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINTF(self):
            return self.getToken(CParser.PRINTF, 0)

        def LBRACKET(self):
            return self.getToken(CParser.LBRACKET, 0)

        def STRINGLITERAL(self):
            return self.getToken(CParser.STRINGLITERAL, 0)

        def RBRACKET(self):
            return self.getToken(CParser.RBRACKET, 0)

        def COMMA(self):
            return self.getToken(CParser.COMMA, 0)

        def argument(self):
            return self.getTypedRuleContext(CParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CParser.RULE_printf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)




    def printf(self):

        localctx = CParser.PrintfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CParser.PRINTF)
            self.state = 163
            self.match(CParser.LBRACKET)
            self.state = 164
            self.match(CParser.STRINGLITERAL)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 165
                self.match(CParser.COMMA)
                self.state = 166
                self.argument()


            self.state = 169
            self.match(CParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScanfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCANF(self):
            return self.getToken(CParser.SCANF, 0)

        def LBRACKET(self):
            return self.getToken(CParser.LBRACKET, 0)

        def STRINGLITERAL(self):
            return self.getToken(CParser.STRINGLITERAL, 0)

        def RBRACKET(self):
            return self.getToken(CParser.RBRACKET, 0)

        def COMMA(self):
            return self.getToken(CParser.COMMA, 0)

        def argument(self):
            return self.getTypedRuleContext(CParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CParser.RULE_scanf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScanf" ):
                listener.enterScanf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScanf" ):
                listener.exitScanf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScanf" ):
                return visitor.visitScanf(self)
            else:
                return visitor.visitChildren(self)




    def scanf(self):

        localctx = CParser.ScanfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_scanf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(CParser.SCANF)
            self.state = 172
            self.match(CParser.LBRACKET)
            self.state = 173
            self.match(CParser.STRINGLITERAL)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 174
                self.match(CParser.COMMA)
                self.state = 175
                self.argument()


            self.state = 178
            self.match(CParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicexpression(self):
            return self.getTypedRuleContext(CParser.LogicexpressionContext,0)


        def STRINGLITERAL(self):
            return self.getToken(CParser.STRINGLITERAL, 0)

        def COMMA(self):
            return self.getToken(CParser.COMMA, 0)

        def argument(self):
            return self.getTypedRuleContext(CParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = CParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 15, 23, 24, 25, 27, 28, 31, 39, 40, 41, 42, 44]:
                self.state = 180
                self.logicexpression()
                pass
            elif token in [43]:
                self.state = 181
                self.match(CParser.STRINGLITERAL)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 184
                self.match(CParser.COMMA)
                self.state = 185
                self.argument()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_statement(self):
            return self.getTypedRuleContext(CParser.Expression_statementContext,0)


        def SEMICOLON(self):
            return self.getToken(CParser.SEMICOLON, 0)

        def comment(self):
            return self.getTypedRuleContext(CParser.CommentContext,0)


        def array_initialisation(self):
            return self.getTypedRuleContext(CParser.Array_initialisationContext,0)


        def jump_statement(self):
            return self.getTypedRuleContext(CParser.Jump_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def block_scope(self):
            return self.getTypedRuleContext(CParser.Block_scopeContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
